@@ -1,7 +1,7 @@
 AUX 01-fix-segfault-0.2.0.patch 1350 RMD160 a1f282838d9f0008bb95fb5df8bd0ac85ae60b36 SHA1 973b79e44ec131c749cb283e2a8ebf01d90251b5 SHA256 b7d1ca359acb17703d7c3ffafd1e32da987105c4595b507ece6c630c18cb9b2a
 AUX 02-buffer-overflow-0.2.0.patch 1794 RMD160 6d3d143833b2d22fd8ff54b6899110091628198c SHA1 dee3f7c6534bc832fbfe9417f4e72689bf2e6732 SHA256 c785c041b2f1b20b0696d9b220ff1c586a4d3e43ce1eea52a33bc45663221768
 DIST wmfrog-0.2.0.tgz 59113 RMD160 ca878146f778cf51d38075bf5cb3673b188f6cbf SHA1 afa920b740c013e9f4698ab098fa289c332a4991 SHA256 9471daf33a87ebab26a0f2477f86caa6d956f3f06771d58ce0b506049e2defb5
-EBUILD wmfrog-0.2.0-r1.ebuild 893 RMD160 dacbf68cb093a2d2c2943f7057c54bf87dbce1bd SHA1 f9e12a82c27aa1107f8989fd87a8a8e5cea09cf1 SHA256 50898bee8c597200da4433e4f3932643ed52462c18dc68d312dbc8f8c6b3d312
+EBUILD wmfrog-0.2.0-r1.ebuild 893 RMD160 3376ab663f9a1dfd42e846d1e7b67a2a32c7b1b2 SHA1 dc8409f33976300cbbffcb84b5370311c282aa5f SHA256 a0c1d7ee2bd4c6566815bc5af47292301bc7aebe5ea174f3c7b4bfedd81cd80e
 EBUILD wmfrog-0.2.0.ebuild 827 RMD160 5c9a28b144665c9c31cbaa197866bc8ca31c35f5 SHA1 69674c562c4e55a1f3c041e1abdba9136f0a96bc SHA256 c3b1c016978c86e44207c544c430bdcf24dc125aa358d15e49fe2c7882da77c8
-MISC ChangeLog 1155 RMD160 ac02e8ceb36c7c2413162e8c4cebf5837718411a SHA1 42d84911421fabb8e94ca3c7a1f57d3bc1bcbd6a SHA256 6101e89a83b3e67a9975ad06bef88814e3d8eb5b26dd0f6a6fe61d9862f07e6d
+MISC ChangeLog 1253 RMD160 97e5a4da39072125b3dc6a5d21b6f34a4242c415 SHA1 9caccba75e90aa9faa03e155fb85d7923ef32381 SHA256 462a4af0d4f851458963da25be5ec62a3d8aca99d35719487f6829801145270c
 MISC metadata.xml 165 RMD160 a554e96dc33b1fb4b3518f27a21bf3f59dc21b1c SHA1 674655a4f0fc35c7b3b2e05aab1910c0ebafade1 SHA256 c2f8a0b30c83dba56f0c36a4ba1cb002621ae58dfc13fae94b9db6eb67fb9f1b
